# drf_proj

./: .env.sample  .gitignore  DockerFile  README.MD  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  paginations.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_rename_useful_habit_usefulls_alter_habit_reward.py  0004_rename_usefulls_habit_usefull.py  0005_alter_habit_reward.py  0006_alter_habit_user.py  0007_habit_last_update_habit_period.py  0008_habit_last_run.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
